syntax = "proto3";

package juno.file_service.config;

import "identifiers.proto";

service FileServiceFileServiceConfigDbService {
  rpc getConfig(GetFileServiceConfigRequest) returns (FileServiceConfig);
  rpc createConfig(CreateFileServiceConfigRequest) returns (FileServiceConfig);
  rpc deleteConfig(DeleteFileServiceConfigRequest) returns (FileServiceConfig);
  rpc updateConfig(UpdateFileServiceConfigRequest) returns (FileServiceConfig);
}

message FileServiceConfig {
  string id = 1;
  repeated FileServiceBucket buckets = 2;
  Project project = 3;
  repeated FileServiceFile files = 4;
}

message GetFileServiceConfigRequest {
  string id = 1;
}

message CreateFileServiceConfigRequest {
  FileServiceConfig config = 1;
}

message UpdateFileServiceConfigRequest {
  string id = 1;
  FileServiceConfig config = 2;
}

message DeleteFileServiceConfigRequest {
  string id = 1;
}